--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Nice Blog
-name: Nice Blog # your name
+title: Netlify CMS Test
+name: Your name # your name
 email: youremail@example.com # your email address
 description: >
-    A Simple Jekyll Blog Theme. # this means to ignore newlines until "baseurl:"
-baseurl: "/Nice_Blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
-twitter_username: # your Twitter username
-github_username: # your Github username
-disqus_username: # your disqus username
+    Testing Netlify CMS for Github # this means to ignore newlines until "baseurl:"
+baseurl: "/netliycsmtest" # the subpath of your site, e.g. /blog
+url: "https://n33m4.github.io/netlifycmstest" # the base hostname & protocol for your site
+twitter_username: github# your Twitter username
+github_username: github# your Github username
+disqus_username: github# your disqus username
 
 google-analytics: # add it if you have one
 
-skillstree: true # turn on or off the skills tree in about page
+skillstree: false # turn on or off the skills tree in about page
 
 # Build settings
 permalink: none
