--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: n33m4/netlifycmstest
   branch: master # Branch to update (optional; defaults to master)
 
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploadsmedia_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
