--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: n33m4/netlifycmstest
   branch: master # Branch to update (optional; defaults to master)
-  site_id: nostalgic-goodall-153c4e.netlify.com
+  site_domain: nostalgic-goodall-153c4e.netlify.com
 
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploadsmedia_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/netlifycmstest/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
